completed block inactive users with crontab
